--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <a href="elisp.html">ELISP tutorial</a>
 <a href="./topsikritanimewebsite/page/main.html">Anime Website Proto</a>
 <a href="TreeCordLuaAPIDocs.html">treecord lua api docs draft</a>
+<a href="wiki/Laser.md">Laser</a>
 </body>
 </html>
